--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <!--Nestle-->
             <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>Nestle Toll House</b><br><i style="font-size: .8em;"><br>Eastvale, CA<br>October 2017 - August 2018</i></h3>
-                <div class="exp-institution-info-flex ">
+                <div>
                     <p><i>Shift Lead</i></p>
                     <p class="f3">Shift Lead at Nestle Toll House often entailed long hours of working the store. Responsible for all opening/closing operations and training of new employees. Duties included daily interactions with POS Software, customer service, baking, serving food, store finances, and cleaning.
                     </p>
@@ -127,7 +127,7 @@
             <!--Kumon-->
             <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>Kumon North America</b><br><i style="font-size: .8em;"><br>Mira Loma, CA<br>August 2016 - August 2017</i></h3>
-                <div class="exp-institution-info-flex">
+                <div>
                     <p><i>Mathematics Tutor</i></p>
                     <p class="f3">Educated young students through engaging math curriculum ranging from Algebra to Calculus. Properly articulated ideas and concepts in a manner where students would be engaged and curious with mathematics through the cultivation of their problem-solving and critical thinking skills. Worked with students of all backgrounds and ages, bolstering my ability to teach, learn, and communicate ideas in an all constructive environment.
                     </p>
