--- a/project-formula1.html
+++ b/project-formula1.html
@@ -62,7 +62,10 @@
                 <div class="f2">
                     <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
                     <p>
-                        Placeholder project information
+                        <i>Goal</i><br>
+                        <p>Info</p>
+                        <i>Approach</i>
+                        <p>Info</p>
                     </p>
                 </div>
             </section>
