--- a/project-formula1.html
+++ b/project-formula1.html
@@ -63,9 +63,9 @@
                     <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
                     <p>
                         <i>Goal</i><br>
-                        <p>Info</p>
-                        <i>Approach</i>
-                        <p>Info</p>
+                        Info
+                        <i>Approach</i><br>
+                        Info
                     </p>
                 </div>
             </section>
