--- a/project-formula1.html
+++ b/project-formula1.html
@@ -62,9 +62,9 @@
                 <div class="f2">
                     <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
                     <p>
-                        <i>Goal</i><br>
+                        <h4><i>Goal</i></h4><br>
                         Info
-                        <i>Approach</i><br>
+                        <h4><i>Approach</i></h4><br>
                         Info
                     </p>
                 </div>
