--- a/project-formula1.html
+++ b/project-formula1.html
@@ -61,12 +61,10 @@
                 <!--Project Info-->
                 <div class="f2">
                     <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
-                    <p>
-                        <h4><i>Goal</i></h4><br>
-                        Info
-                        <h4><i>Approach</i></h4><br>
-                        Info
-                    </p>
+                    <h4><i>Goal</i></h4><br>
+                    <p>Info</p>
+                    <h4><i>Approach</i></h4><br>
+                    <p>Info</p>
                 </div>
             </section>
 
