--- a/project-formula1.html
+++ b/project-formula1.html
@@ -60,10 +60,11 @@
 
                 <!--Project Info-->
                 <div class="f2">
-                    <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
-                    <h4><i>Goal</i></h4><br>
+                    <h3><i>Technology Stack</i></h3>
+                    <p>Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</p>
+                    <h3><i>Goal</i></h3><br>
                     <p>Info</p>
-                    <h4><i>Approach</i></h4><br>
+                    <h3><i>Approach</i></h3><br>
                     <p>Info</p>
                 </div>
             </section>
