--- a/project-formula1.html
+++ b/project-formula1.html
@@ -59,7 +59,7 @@
                 </button>
 
                 <!--Project Info-->
-                <div class="f2">
+                <div class="project-info">
                     <h3><i>Technology Stack</i></h3>
                     <p>Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</p>
                     <h3><i>Goal</i></h3><br>
