--- a/project-formula1.html
+++ b/project-formula1.html
@@ -62,10 +62,13 @@
                 <div class="project-info">
                     <h3><i>Technology Stack</i></h3>
                     <p>Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</p>
-                    <h3><i>Goal</i></h3><br>
+                    <br>
+                    <h3><i>Goal</i></h3>
                     <p>Info</p>
-                    <h3><i>Approach</i></h3><br>
+                    <br>
+                    <h3><i>Approach</i></h3>
                     <p>Info</p>
+                    <br>
                 </div>
             </section>
 
