--- a/project-formula1.html
+++ b/project-formula1.html
@@ -64,10 +64,10 @@
                     <p>Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</p>
                     <br>
                     <h3><i>Goal</i></h3>
-                    <p>Info</p>
+                    <p>PlaceHolder text PlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder text</p>
                     <br>
                     <h3><i>Approach</i></h3>
-                    <p>Info</p>
+                    <p>PlaceHolder text PlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder textPlaceHolder text</p>
                     <br>
                 </div>
             </section>
