--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="limitedWidth" style="margin: auto;">
-            <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/index.html'">
+            <button type="button" class="btn topBtn backBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/index.html'">
                 <span>&larr; Back to Home</span>
             </button>
             <!--Bulk Project Section-->
