--- a/about-me.html
+++ b/about-me.html
@@ -80,7 +80,7 @@
             </section>
 
             <div style="text-align: center;">
-                <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
+                <button class="btn topBtn topBtnMargin" onclick="window.scrollTo({top: 0})">
                     <span>Back to Top</span>
                 </button>
             </div>
