--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <footer>
         <div style="text-align: center; color: var(--bg-color2)">
-            &copy; Copyright 2022 Jay Shinde
+            <p>&copy; Copyright 2022 Jay Shinde</p>
         </div>
     </footer>
     <script type="text/javascript" src="main.js"></script>
