--- a/project-formula1.html
+++ b/project-formula1.html
@@ -82,7 +82,7 @@
     
     <footer>
         <div style="text-align: center; color: var(--bg-color2)">
-            &copy; Copyright 2022 Jay Shinde
+            <p>&copy; Copyright 2022 Jay Shinde</p>        
         </div>
     </footer>
 </body>
