--- a/about-me.html
+++ b/about-me.html
@@ -89,7 +89,7 @@
     
     <footer>
         <div style="text-align: center; color: var(--bg-color2)">
-            &copy; Copyright 2022 Jay Shinde
+            <p>&copy; Copyright 2022 Jay Shinde</p>        
         </div>
     </footer>
 
