--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
     
     <footer>
         <div style="text-align: center; color: var(--bg-color2)">
-            &copy; Copyright 2022 Jay Shinde
+            <p>&copy; Copyright 2022 Jay Shinde</p>        
         </div>
     </footer>
 </body>
