--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,11 @@
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
                 <h2>Contact Me</h2>
-                <h3>Connect with me on LinkedIn</h3>
+                <p>Connect with me on LinkedIn</>
                 <a class="social-icon linkedin" href="https://www.linkedin.com/in/jayshinde0714/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <h3>Or send me a message.</h3>
+                <p>Or send me a message.</p>
                 <div class="container">
                     <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" style="text-align:center">
                         <input class="contactField" type="text" name="name" placeholder="Name" required>
