--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
                 <h2>Contact Me</h2>
-                <p>Connect with me on LinkedIn</>
+                <p>Connect with me on LinkedIn</p>
                 <a class="social-icon linkedin" href="https://www.linkedin.com/in/jayshinde0714/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
