--- a/project-formula1.html
+++ b/project-formula1.html
@@ -77,6 +77,8 @@
                             $$1: p(r) = -0.03019339(r) + 5.79165713$$
                             $$2: p(r) = -0.06664188(r) + 12.02118485$$
                         </div>
+                        <br>
+                        <p style="text-align: center;">Where <i>p</i> is the expected finishing position at the <i>r</i>th race</p>
                         <br><br>Now that each driver's predictive model has a y-intercept and coefficient, it's possible to functionally define a line and observe the behaviour of the explanatory variable past the last point of the independent variable. In the specific study I conducted, I noticed that one driver started their career fairly bad start to their career(high y-intercept) but managed to improve exceedingly well (large negative coefficient). The other driver started their career decently (low y-intercept) but was very slow in long-term improvement (small negative coefficient). However, both drivers are expected to finish 1st place. That's not possible, is it? <br><br>
                     </p>
                     <br>
