--- a/project-formula1.html
+++ b/project-formula1.html
@@ -66,7 +66,7 @@
                     <p>Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</p>
                     <br>
                     <h3><i>Goal</i></h3>
-                    <p>This project was conducted to find a way to predict the future performance of a Formula 1 Driver. There must be a function that can model a driver's performance from which we can observe the rate of improvement or decline in their previous performances and create a prediction of their future improvement by calculating their performance trajectory using linear regression.</p>
+                    <p>This project was conducted to find a way to predict the future performance of a Formula 1 Driver. There must be a function that can model a driver's performance from which we can observe the rate of improvement or decline in their previous performances and create a prediction of their future improvement by calculating their performance trajectory using linear regression. I uncover the presence of external bias on the model if any.</p>
                     <br>
                     <h3><i>Approach</i></h3>
                     <p>
@@ -79,12 +79,13 @@
                         Let <i>p</i> be the expected finishing position at the <i>r</i><sup>th</sup> race.
                     </p>
                     <p>  
-                        $$1: p(r) = -0.03019339(r) + 5.79165713$$
-                        $$2: p(r) = -0.06664188(r) + 12.02118485$$
+                        $$1: p(r) = -0.06664188(r) + 12.02118485$$
+                        $$2: p(r) = -0.03019339(r) + 5.79165713$$
                     </p> 
 
                     <p>
-                        <br><br>Now that each driver's predictive model has a y-intercept and coefficient, it's possible to functionally define a line and observe the behaviour of the explanatory variable past the last point of the independent variable. In the specific study I conducted, I noticed that one driver started their career fairly bad start to their career(high y-intercept) but managed to improve exceedingly well (large negative coefficient). The other driver started their career decently (low y-intercept) but was very slow in long-term improvement (small negative coefficient). However, both drivers are expected to finish 1st place. That's not possible, is it? <br><br>
+                        <br><br>Now that each driver's predictive model has a y-intercept and coefficient, it's possible to functionally define a line and observe the behaviour of the explanatory variable past the last point of the independent variable. In the specific study I conducted, I noticed that driver one started their career with a mediocre start to their career (high y-intercept) but managed to improve exceedingly well (large negative coefficient). The other driver started their career decently (low y-intercept) but was very slow in long-term improvement (small negative coefficient). However, both drivers are expected to finish 1st place at some point in the future. That's not possible, is it?
+                        <br><br>You're right, it's not possible. The fact that both drivers are to be expected in 1<sup>st</sup> place introduces concern for bias. There are credible sources that state driver two was forced to hold back such that driver one can remain consistently in the front. This is the prime example of how my data can predict an outcome but loses credibility when external factors influence the explanatory variable. It is impossible for a mathematical model to be 100% accurate if in the presence of external bias, however, you can approach the 100% as best you can.
                     </p>
                     <br>
                 </div>
