--- a/project-formula1.html
+++ b/project-formula1.html
@@ -76,7 +76,7 @@
                         <br><br> 
                     </p>
                     <p style="text-align:center;">
-                        Let <i>p</i> be the expected finishing position for the <i>r</i><sup> th</sup> race.
+                        Let <i>p</i> be the expected finishing position for the <i>r</i><sup>&nbsp;th</sup> race.
                     </p>
                     <p>  
                         $$1: p(r) = -0.06664188(r) + 12.02118485$$
