--- a/project-formula1.html
+++ b/project-formula1.html
@@ -65,7 +65,7 @@
                     <h3><i>Technology Stack</i></h3>
                     <p>Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</p>
                     <br>
-                    <h3><i>Goal</i></h3>
+                    <h3><i>Objective</i></h3>
                     <p>This project was conducted to find a way to predict the future performance of a Formula 1 Driver. There must be a function that can model a driver's performance from which we can observe the rate of improvement or decline in their previous performances and create a prediction of their future improvement by calculating their performance trajectory using linear regression. I uncover the presence of external bias on the model if any.</p>
                     <br>
                     <h3><i>Approach</i></h3>
