--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <p class="f3">Lossless data compression algorithm implemented using Huffman Coding, an industry standard in compression commonly used in formats like GZIP, BZIP2, PKZIP, etc. Program is a greedy implementation allowing for both compress and uncompress functionality. 
                     </p>
                 </div>
-                <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/huffman.html';"-->
+                <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-huffman.html';"> 
                     <span>Project Details &rarr;</span>
                 </button>
             </div>
@@ -173,7 +173,7 @@
                     <p class="f3">Traffic Light Controller simulating a 6-way, 4-street intersection with 20 possible traffic light states. State transitions are defined by sensors that trigger on presence of a vehicle on the street in order to both minimize vehicle time spent at red lights and maximize traffic flow. 
                     </p>
                 </div>
-                <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/trafficlights.html';"-->
+                <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-traffic-lights.html';">
                     <span>Project Details &rarr;</span>
                 </button>
             </div>
@@ -185,7 +185,7 @@
                     <p class="f3">Financial Budgeting Tool using the 50/30/20 rule meant to define proper income allowances into several buckets: Wants, Needs, Savings, and Investment Accounts. This script is not meant as financial advice and should be used purely as insight into what a foundational budget may look like.
                     </p>
                 </div>
-                <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';"-->
+                <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-budgeting-calc.html';">
                     <span>Project Details &rarr;</span>
                 </button>
             </div>
