--- a/project-huffman.html
+++ b/project-huffman.html
@@ -85,13 +85,13 @@
                     <h4>
                         Compress
                     </h4>
-                    <p>
+                    <p style="padding-left:2em;">
                         Placeholder
                    </p>
                    <h4>
                         Uncompress
                     </h4>
-                    <p>
+                    <p style="padding-left:2em;">
                         Placeholder
                    </p>
                     <br>
