--- a/project-huffman.html
+++ b/project-huffman.html
@@ -64,7 +64,7 @@
                         <i>Technology Stack</i>
                     </h3>
                     <p>
-                        Placeholder
+                        C++ 11, Makefile
                     </p>
                     <br>
 
@@ -72,7 +72,7 @@
                         <i>Objective</i>
                     </h3>
                     <p>
-                        Create a lossless data compression tool that uses the Huffman Coding Algorithm to compress and uncompress data. The data format the compress and uncompress programs handle are files containing ASCII values. The compress program will take an original file and encode the contents to the compressed file's header containing binary digits. The uncompress program will read a compressed file's header and decode the binary sequence into the original document that was compressed. 
+                        Create a lossless data compression tool that uses the Huffman Coding Algorithm to compress and uncompress data. The data format the programs handle are files containing ASCII values. The compress program will take an original file and encode the contents to the compressed file's header containing a binary sequence. The uncompress program will read a compressed file's header and decipher the binary sequence into the original document that was compressed. 
                     </p>
                     <br>
 
