--- a/project-huffman.html
+++ b/project-huffman.html
@@ -72,7 +72,7 @@
                         <i>Objective</i>
                     </h3>
                     <p>
-                        Create a lossless data compression tool that uses the Huffman Coding Algorithm to compress and uncompress data. The data format the programs handle are files containing ASCII values. The compress program will take an original file and encode the contents to the compressed file's header containing a binary sequence. The uncompress program will read a compressed file's header and decipher the binary sequence into the original document that was compressed. 
+                        Create a lossless data compression tool that uses the Huffman Coding Algorithm to compress and uncompress data. The data format the programs handle are files containing ASCII values. The compress program will take an original file and encode the contents to the compressed file's header containing a binary sequence. The uncompress program will read a compressed file's header and decipher the binary sequence to reconstruct the original document that was compressed. 
                     </p>
                     <br>
 
@@ -80,8 +80,9 @@
                         <i>Approach</i>
                     </h3>
                     <p>
-                         Placeholder
+                         In order to compress or uncompress a file, a Huffman Code must be constructed. A Huffman Code is a type of optimal, variable-length prefix code used to distinguish ASCII characters from one another. In this particular implementation, I construct the Huffman Code using a binary trie. Each character that will be encoded or decoded must have its own unique Huffman Code. This binary trie representation is the pivot around which the compress and uncompress programs operate. The compress program reads in data from a file and constructs a Huffman Coding Tree from which the sequence of Huffman Codes are written into the header of the compressed file. The uncompress program works in reverse; the Huffman Code sequence is read from the compressed file header and used to reconstruct the original Huffman Coding Tree. From there, the original document can be reconstructed. 
                     </p>
+                    <img src="/images/huffman.jpg" alt="Huffman Coding Tree" class="huffmanPicture">
                     <h4>
                         Compress
                     </h4>
