--- a/project-huffman.html
+++ b/project-huffman.html
@@ -80,7 +80,8 @@
                         <i>Approach</i>
                     </h3>
                     <p>
-                         In order to compress or uncompress a file, a Huffman Code must be constructed. A Huffman Code is a type of optimal, variable-length prefix code used to distinguish ASCII characters from one another. In this particular implementation, I construct the Huffman Code using a binary trie. Each character that will be encoded or decoded must have its own unique Huffman Code. This binary trie representation is the pivot around which the compress and uncompress programs operate. The compress program reads in data from a file and constructs a Huffman Coding Tree from which the sequence of Huffman Codes are written into the header of the compressed file. The uncompress program works in reverse; the Huffman Code sequence is read from the compressed file header and used to reconstruct the original Huffman Coding Tree. From there, the original document can be reconstructed. 
+                         In order to compress or uncompress a file, a Huffman Code must be constructed. A Huffman Code is a type of optimal, variable-length prefix code used to distinguish ASCII characters from one another. In this particular implementation, I construct the Huffman Code using a binary trie. Each character that will be encoded or decoded must have its own unique Huffman Code. This binary trie representation is the pivot around which the compress and uncompress programs operate. 
+                         <br><br>The compress program reads in data from a file and constructs a Huffman Coding Tree from which the sequence of Huffman Codes are written into the header of the compressed file. The uncompress program works in reverse; the Huffman Code sequence is read from the compressed file header and used to reconstruct the original Huffman Coding Tree. From there, the original document can be reconstructed. 
                     </p>
                     <br>
                     <img style="display: block; margin-left: auto; margin-right: auto;" src="/images/huffman.png" alt="Huffman Coding Tree" class="huffmanPicture">
@@ -89,7 +90,8 @@
                         Compress
                     </h4>
                     <p style="padding-left:2em;">
-                        Placeholder
+                        When the compress program first begins, each byte in the original file is read and the frequency of each byte is stored in an unordered map. Then, we create new Tree Nodes for each entry in the frequency map that contain the nodes' associated ASCII values and its frequencies. Then we push every Node that has a frequency greater than 0 into a priority queue. A priority queue is necessary to prioritize ASCII values with the lowest frequencies. From this priority queue, we can construct the Huffman Coding Tree by popping minimum priority Nodes and deriving their children Nodes iteratively by combining their parent frequencies. Every node with a value will be a leaf node; every parent node will not have a value. In addition, each edge in the trie will have a 0 or 1 as a symbol such that each letter has a unique binary sequence derived from the path to the leaf node; this is called the Huffman Code.
+                        <br><br> Now that the Huffman Coding Tree has been constructed we can encode our data. We read the original file from the beginning and encode each character in order. For each character, we will search the Huffman Coding Tree for the leaf node and note the path it takes in form of its unique Huffman Code. Then, the Huffman Code will be written into the header of new file. This is repeated for all characters in the original file. The result is a new file that is much smaller in size, but contains all the data needed to reconstruct the Huffman Coding Tree and consequently the original document.
                    </p>
                    <h4>
                         Uncompress
