budget calc page

--- a/project-budgeting-calc.html
+++ b/project-budgeting-calc.html
@@ -64,7 +64,7 @@
                         <i>Technology Stack</i>
                     </h3>
                     <p>
-                        Placeholder
+                        Python
                     </p>
                     <br>
 
