tech stack and obj update

--- a/project-traffic-lights.html
+++ b/project-traffic-lights.html
@@ -64,7 +64,7 @@
                         <i>Technology Stack</i>
                     </h3>
                     <p>
-                        Placeholder
+                        SystemVerilog
                     </p>
                     <br>
 
@@ -72,7 +72,7 @@
                         <i>Objective</i>
                     </h3>
                     <p>
-                        Placeholder
+                        This two-part project is an implementation of two versions of an intersection. Part 1 is an implementation of a symmetrical intersection in which our model will have 4 possible states.
                     </p>
                     <br>
 
