--- a/project-traffic-lights.html
+++ b/project-traffic-lights.html
@@ -75,7 +75,9 @@
                         This two-part project is an implementation of two versions of an intersection. Part 1 is an implementation of a symmetrical intersection in which our model will have 4 possible states.
                     </p>
                     <br>
-
+                    <img style="display: block; margin-left: auto; margin-right: auto;" src="/images/intersection1.png" alt="Intersection 1" class="huffmanPicture">
+                    <br>
+                    <br>
                     <h3>
                         <i>Approach</i>
                     </h3>
