traffic lights docs update

--- a/project-traffic-lights.html
+++ b/project-traffic-lights.html
@@ -77,7 +77,16 @@
                     <br>
                     <img style="display: block; margin-left: auto; margin-right: auto;" src="/images/intersection1.png" alt="Intersection 1" class="huffmanPicture">
                     <br>
+                    <p>
+                        The four states that we have are as follows:
+                    </p>
                     <br>
+                    <ul>
+                        <li>North/Sound bound = GREEN, East/West bound = RED</li>
+                        <li>North/Sound bound = YELLOW, East/West bound = RED</li>
+                        <li>North/Sound bound = RED, East/West bound = GREEN</li>
+                        <li>North/Sound bound = RED, East/West bound = YELLOW</li>
+                    </ul>
                     <h3>
                         <i>Approach</i>
                     </h3>
