traffic lights docs update

--- a/project-traffic-lights.html
+++ b/project-traffic-lights.html
@@ -82,7 +82,7 @@
                     </p>
                     <br>
                     <ul>
-                        <li>North/Sound bound = GREEN, East/West bound = RED</li>
+                        <li><p>North/Sound bound = GREEN, East/West bound = RED</p></li>
                         <li>North/Sound bound = YELLOW, East/West bound = RED</li>
                         <li>North/Sound bound = RED, East/West bound = GREEN</li>
                         <li>North/Sound bound = RED, East/West bound = YELLOW</li>
