traffic lights docs update

--- a/project-traffic-lights.html
+++ b/project-traffic-lights.html
@@ -83,9 +83,9 @@
                     <br>
                     <ul>
                         <li><p>North/Sound bound = GREEN, East/West bound = RED</p></li>
-                        <li>North/Sound bound = YELLOW, East/West bound = RED</li>
-                        <li>North/Sound bound = RED, East/West bound = GREEN</li>
-                        <li>North/Sound bound = RED, East/West bound = YELLOW</li>
+                        <li><p>North/Sound bound = YELLOW, East/West bound = RED</p></li>
+                        <li><p>North/Sound bound = RED, East/West bound = GREEN</p></li>
+                        <li><p>North/Sound bound = RED, East/West bound = YELLOW</p></li>
                     </ul>
                     <h3>
                         <i>Approach</i>
